# tourists-visit-cities

./: README.md
visitations/: Cargo.toml
visitations/src/: main.rs  schema.tql
